--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,7 @@
   padding: 2rem;
   text-align: center;
   background-color: bisque;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
 }
