--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 #root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 2rem;
   text-align: center;
   background-color: bisque;
   display: flex;
   justify-content: center;
-  height: 100vh;
 }
